--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ serde = "1.0.27"
 serde_derive = "1.0.27"
 serde_json="*"
 crossbeam-channel = "0.3.2"
-lru = { git="https://github.com/jeromefroe/lru-rs", version="*"}
+lru = "0.1.11"
 rand="0.6"
 twox-hash = "1.1.2"
 regex="*"
