--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ serde = "1.0.27"
 serde_derive = "1.0.27"
 serde_json="*"
 crossbeam-channel = "0.3.2"
-lru = "0.1.11"
+#lru = "0.1.11"
+lru = {git="https://github.com/rohitjoshi/lru-rs", version="*"}
+hashbrown = "0.1.8"
+parking_lot = "0.7.1"
 rand="0.6"
 twox-hash = "1.1.2"
 regex="*"
