--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ serde_derive = "1.0.27"
 serde_json="1.0.33"
 crossbeam-channel = "0.3.2"
 #lru = "0.1.11"
-lru = {git="https://github.com/rohitjoshi/lru-rs", version="*"}
+lru = {git="https://github.com/rohitjoshi/lru-rs", version="0.1.12"}
 hashbrown = "0.1.8"
 parking_lot = "0.7.1"
 rand="0.6"
