--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,4 @@ parking_lot = "0.7.1"
 rand="0.6"
 twox-hash = "1.1.2"
 regex="1.1.0"
-rocksdb = {git="https://github.com/rohitjoshi/rust-rocksdb", version="*"}
+rocksdb = { path="rust-rocksdb", version="0.11.0"}
