--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ license-file="LICENSE"
 publish = true
 
 [badges]
-travis-ci = { repository = "https://github.com/rohitjoshi/bhatho", branch = "master" }
-codecov = { repository = "https://github.com/rohitjoshi/bhatho", branch = "master", service = "github" }
+travis-ci = { repository = "https://travis-ci.org/rohitjoshi/bhatho", branch = "master" }
+codecov = { repository = "https://codecov.io/gh/rohitjoshi/bhatho", branch = "master", service = "github" }
 
 
 
@@ -23,10 +23,10 @@ serde_derive = "1.0.27"
 serde_json="1.0.33"
 crossbeam-channel = "0.3.2"
 #lru = "0.1.11"
-lru = {path = "lru-rs", version="0.1.12"}
+lru = {path = "lru-rs", version="0.1.11"}
 hashbrown = "0.1.8"
 parking_lot = "0.7.1"
 rand="0.6"
 twox-hash = "1.1.2"
 regex="1.1.0"
-rocksdb = { path="rust-rocksdb", version="0.11.0"}
+rocksdb = { path="rust-rocksdb", version="0.11.1"}
