--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,10 @@ serde_derive = "1.0.27"
 serde_json="1.0.33"
 crossbeam-channel = "0.3.2"
 #lru = "0.1.11"
-lru = {path = "./lru-rs", version="0.1.11"}
+lru =  {git="https://github.com/jeromefroe/lru-rs", version="*"} 
 hashbrown = "0.1.8"
 parking_lot = "0.7.1"
 rand="0.6"
 twox-hash = "1.1.2"
 regex="1.1.0"
-rocksdb = { path="./rust-rocksdb", version="0.11.1"}
+rocksdb = {git="https://github.com/rust-rocksdb/rust-rocksdb", version="*"}
