--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,4 +37,6 @@ crc16 = "0.4.0"
 regex="1.1.0"
 rocksdb = {git="https://github.com/rust-rocksdb/rust-rocksdb", version="*"}
 scoped_threadpool="*"
+rayon="1.0.3"
+#sthash="0.2.3"
 
