--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bhatho"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Rohit Joshi <rohit.c.joshi@gmail.com>"]
 edition = "2018"
 description = "LRU Caching library with persistent layer using RocksDB"
@@ -35,7 +35,8 @@ twox-hash = "1.1.2"
 jumphash = "~0"
 crc16 = "0.4.0"
 regex="1.1.0"
-rocksdb = {git="https://github.com/rust-rocksdb/rust-rocksdb", version="*"}
+#rocksdb = {git="https://github.com/rust-rocksdb/rust-rocksdb", version="*"}
+rocksdb="0.12.1"
 scoped_threadpool="*"
 rayon="1.0.3"
 #sthash="0.2.3"
