--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ crc16 = "0.4.0"
 regex="1.1.0"
 #rocksdb = {git="https://github.com/rust-rocksdb/rust-rocksdb", version="*"}
 rocksdb="0.12.1"
-scoped_threadpool="*"
+scoped_threadpool="0.1.9"
 rayon="1.0.3"
 #sthash="0.2.3"
 
